--- a/config.yaml
+++ b/config.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: codeserver
-        image: linuxserver/code-server
+        image: lscr.io/linuxserver/code-server:latest
         env:
         - name: PASSWORD
           value: password
@@ -32,7 +32,7 @@ spec:
             memory: "800Mi"
             cpu: "400m"
         ports:
-        - containerPort: 80
+        - containerPort: 8443
         volumeMounts:
         - name: codeserverconfig
           mountPath: /config
@@ -52,7 +52,7 @@ spec:
     app: codeserver
   ports:
   - port: 80
-    targetPort: 80
+    targetPort: 8443
 
 
 ---
