--- a/config.yaml
+++ b/config.yaml
@@ -47,7 +47,7 @@ kind: Service
 metadata:
   name: codeserverservice
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: codeserver
   ports:
